<resources>
    <string name="app_name">ProjectorLauncher</string>
    <string name="left_arrow">left_arrow</string>
    <string name="more_category">more category</string>
    <string name="search">search</string>
    <string name="not_connected_to_wifi_network">未连接网络</string>
    <string name="connecting_to_the_network">正在连接网络：</string>
    <string name="network_connected">已连接网络：</string>
    <string name="on">启用</string>
    <string name="off">停止</string>
    <string name="wifi_ssid">名称:</string>
    <string name="passwd">密码:</string>
    <string name="security">安全性</string>
    <string name="connect">连接</string>
    <string name="memory">内存空间: 1G</string>
    <string name="storage">存储空间: 4G</string>
    <string name="system_version">系统版本: 9.0</string>
    <string name="software_version">软件版本: 1.0</string>
    <string name="logo_name">产品名字</string>
    <string name="settings">设置</string>
    <string name="ip_mode">IP模式设置:</string>
    <string name="ip_address">IP地址:</string>
    <string name="subnet_mask">子网掩码:</string>
    <string name="dns_address">DNS地址:</string>
    <string name="static_ip">静态代理</string>
    <string name="confirm">确认</string>
    <string name="ethernet_settings">网口设置</string>
    <string name="gateway">网关:</string>
    <string name="mount">U盘已挂载:</string>
    <string name="unmount">U盘取消挂载</string>
    <string name="video">视频</string>
    <string name="audio">音频</string>
    <string name="picture">图片</string>
    <string name="error">发生错误！！！！</string>
    <string name="recent_history">recent_history</string>
    <string name="recent_watch">最近观看</string>
    <string name="tv">tv</string>
    <string name="tv_text">电视剧</string>
    <string name="show">show</string>
    <string name="show_text">综艺</string>
    <string name="search_text">搜索</string>
    <string name="game">game</string>
    <string name="game_text">游戏</string>
    <string name="local_resource">local resource</string>
    <string name="local_resource_text">本地资源</string>
    <string name="application">application</string>
    <string name="application_text">应用</string>
    <string name="movie">movie</string>
    <string name="movie_text">影片</string>
    <string name="automatic_time_update">自动更新时间</string>
    <string name="manually_update_the_time">手动更新时间</string>
    <string name="more_category_new">更多内容</string>
    <string name="keystone_settings">梯度设置</string>
    <string name="picture_settings">画面设置</string>
    <string name="switch_ethernet_success">切换成功</string>
    <string name="audio_settings">声音设置</string>
    <string name="keystone_content">中心圆为正圆时画面比例最佳</string>
    <string name="keystone_select">为选点</string>
    <string name="keystone_tuning_panel">为调整</string>
    <string name="keystone_back">为返回</string>
    <string name="show_passwd">显示密码</string>
    <string name="source">信号源</string>
    <string name="more">更多</string>
    <string name="history">历史</string>
    <string name="time_settings">时间设置</string>
    <string name="auto_update_time">自动更新时间</string>
    <string name="time">时间</string>
    <string name="date">日期</string>
    <string name="time_zone">时区</string>
    <string name="system_info">系统信息</string>
    <string name="wifi">无线网络</string>
    <string name="ethernet">有线网络</string>
    <string name="time_setting">时间设置</string>
    <string name="language_setting">语言设置</string>
    <string name="more_setting">更多设置</string>
    <string name="language_select">语言选择</string>
</resources>