<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="100dp"
    android:descendantFocusability="afterDescendants"
    android:background="@drawable/category_dialog_background">


    <TextView
        android:id="@+id/video"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:background="@drawable/category_background_selector"
        android:focusable="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:letterSpacing="0.3"
        android:text="@string/video"
        android:textColor="@color/self_4"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/audio"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/category_background_selector"
        android:focusable="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:letterSpacing="0.3"
        android:text="@string/audio"
        android:textColor="@color/self_4"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/image"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:background="@drawable/category_background_selector"
        android:focusable="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:letterSpacing="0.3"
        android:text="@string/picture"
        android:textColor="@color/self_4"
        android:textSize="30sp" />
</LinearLayout>