<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/ethernet_settings"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"/>

    <ImageView
        android:layout_width="500dp"
        android:layout_height="28dp"
        android:src="@drawable/line" />

    <LinearLayout
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|start">

        <TextView
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_vertical|end"
            android:text="@string/ip_mode"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_switch"
            android:layout_width="130dp"
            android:layout_height="35dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/edit_background_ethernet_selector"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/static_ip"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/connect"
            android:layout_width="115dp"
            android:layout_height="35dp"
            android:layout_marginEnd="15dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/edit_background_ethernet_selector"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="22sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ip"
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_vertical|end"
            android:text="@string/ip_address"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/ipAddress"
            android:layout_width="260dp"
            android:layout_height="38dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/edit_background_ethernet_selector"
            android:focusable="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gateway"
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_vertical|end"
            android:text="@string/gateway"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/gateway_address"
            android:layout_width="260dp"
            android:layout_height="38dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/edit_background_ethernet_selector"
            android:focusable="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mask"
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ipTitle"
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_vertical|end"
            android:text="@string/subnet_mask"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/netmask"
            android:layout_width="260dp"
            android:layout_height="38dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/edit_background_ethernet_selector"
            android:focusable="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dns"
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="38dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_vertical|end"
            android:text="@string/dns_address"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/dns1"
            android:layout_width="260dp"
            android:layout_height="38dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/edit_background_ethernet_selector"
            android:focusable="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="22sp"/>
    </LinearLayout>
</LinearLayout>