<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="afterDescendants">

    <androidx.cardview.widget.CardView
        android:id="@+id/more"
        android:layout_width="130dp"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:nextFocusLeft="@id/more"
        android:nextFocusRight="@id/recycler_view"
        app:cardBackgroundColor="#004D40"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/more"
            android:textColor="@color/white"
            android:textSize="25sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/search"
        android:layout_width="130dp"
        android:layout_height="160dp"
        android:layout_below="@id/more"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:nextFocusLeft="@id/search"
        android:nextFocusRight="@id/recycler_view"
        app:cardBackgroundColor="#006064"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/search_text"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/history"
        android:layout_width="130dp"
        android:layout_height="160dp"
        android:layout_below="@id/search"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:nextFocusLeft="@id/history"
        android:nextFocusRight="@id/recycler_view"
        android:nextFocusDown="@id/history"
        app:cardBackgroundColor="#00897B"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/history"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/more" />
</RelativeLayout>