<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="afterDescendants"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:fontFamily="sans-serif-black"
        android:letterSpacing="0.1"
        android:text="@string/time_settings"
        android:textColor="@color/white"
        android:textSize="29sp" />

    <RelativeLayout
        android:id="@+id/mode"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:foreground="@drawable/mode_foreground_selector"
        android:background="@drawable/fragment_spinner_background"
        android:nextFocusDown="@id/time_hour"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/mode_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="50dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:paddingVertical="5dp"
            android:text="@string/auto_update_time"
            android:textColor="@color/black"
            android:textSize="23sp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/arrow_drop_black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/time_settings"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/fragment_spinner_background">

        <TextView
            android:id="@+id/time_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:letterSpacing="0.1"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <RelativeLayout
            android:id="@+id/time_hour"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_title"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:foreground="@drawable/time_settings_foreground_selector"
            android:background="@drawable/time_popup_window_background"
            android:focusable="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/time_hour_title"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:src="@drawable/arrow_drop_white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/time_minute"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_title"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/time_hour"
            android:foreground="@drawable/time_settings_foreground_selector"
            android:background="@drawable/time_popup_window_background"
            android:focusable="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/time_minute_title"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:src="@drawable/arrow_drop_white" />
        </RelativeLayout>

        <TextView
            android:id="@+id/date_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_hour"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:letterSpacing="0.1"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <RelativeLayout
            android:id="@+id/date_set"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_title"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:foreground="@drawable/time_settings_foreground_selector"
            android:background="@drawable/time_popup_window_background"
            android:focusable="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/date_set_title"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:letterSpacing="0.1"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:src="@drawable/arrow_drop_white" />
        </RelativeLayout>

        <TextView
            android:id="@+id/time_zone_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_set"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:letterSpacing="0.1"
            android:text="@string/time_zone"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <RelativeLayout
            android:id="@+id/time_zone"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_zone_title"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:foreground="@drawable/time_settings_foreground_selector"
            android:background="@drawable/time_popup_window_background"
            android:focusable="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/time_zone_set"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:letterSpacing="0.1"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:src="@drawable/arrow_drop_white" />
        </RelativeLayout>

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@id/time_zone"
            android:layout_centerInParent="true"
            android:layout_marginVertical="15dp"
            android:foreground="@drawable/time_settings_foreground_selector"
            android:background="@drawable/time_popup_window_background"
            android:focusable="true"
            android:clickable="true"
            android:paddingHorizontal="35dp"
            android:text="@string/confirm"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>